# Rucas_custom_msg

./: CMakeLists.txt  README.md  package.xml
msg/: TaskInfo.msg  order.msg  robot_purpose.msg
srv/: door_open.srv  isempty.srv  linear_on.srv  marker_msgs.srv  robot_current.srv
